Fix $neutral-med contrast ratio

--- a/_sass/_0variables.scss
+++ b/_sass/_0variables.scss
@@ -16,7 +16,7 @@ $white: #fff;  //in case I decide to use a slightly off-white
 
 $neutral-dark: #444;
 $neutral-light: #ddd;
-$neutral-med: #999;
+$neutral-med: #777;
 
 $teal: #067;
 $dark-teal: #034;
